Fix  - maze v1 done

--- a/inroduction.ipynb
+++ b/inroduction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "helpful-flush",
+   "id": "premier-updating",
    "metadata": {},
    "source": [
     "# Introduction"
@@ -10,30 +10,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "phantom-penguin",
+   "execution_count": 11,
+   "id": "sophisticated-astrology",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import ttgtcanvas\n",
-    "import asyncio"
+    "from ttgtcanvas import load_world , Maze\n",
+    "import asyncio\n",
+    "import os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "unknown-closure",
+   "execution_count": 12,
+   "id": "wrong-cutting",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d1eac25c3ef144dd86ac879dd21832a0",
+       "model_id": "60b2098b0627411f92418bdfe935f776",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Canvas(value=None)"
+       "Maze()"
       ]
      },
      "metadata": {},
@@ -41,34 +42,45 @@
     }
    ],
    "source": [
-    "w = ttgtcanvas.Canvas()\n",
-    "display(w)"
+    "maze = load_world('./worlds/hurdles1.wld')\n",
+    "maze"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "personal-xerox",
+   "execution_count": 13,
+   "id": "strong-budapest",
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = w.draw_canvas()\n"
+    "maze.create_layer()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "nutritional-airline",
+   "execution_count": 16,
+   "id": "rocky-current",
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = w.draw_canvas()\n"
+    "robot = maze.add_robot('./robot-design.svg')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "facial-intellectual",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(10):\n",
+    "    robot.move()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "married-attempt",
+   "id": "amended-geology",
    "metadata": {},
    "outputs": [],
    "source": []
