fix - beeper pickup

--- a/inroduction.ipynb
+++ b/inroduction.ipynb
@@ -10,26 +10,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "sophisticated-astrology",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ttgtcanvas import load_world , Maze\n",
+    "from ttgtcanvas import load_world\n",
     "import asyncio\n",
+    "\n",
     "import os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "wrong-cutting",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "60b2098b0627411f92418bdfe935f776",
+       "model_id": "1c0d0c5eeeb34999a6030c2e1401ab08",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Maze()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1c0d0c5eeeb34999a6030c2e1401ab08",
        "version_major": 2,
        "version_minor": 0
       },
@@ -42,45 +57,73 @@
     }
    ],
    "source": [
-    "maze = load_world('./worlds/hurdles1.wld')\n",
+    "maze =  load_world('./worlds/hurdles2.wld')\n",
     "maze"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "strong-budapest",
    "metadata": {},
    "outputs": [],
    "source": [
-    "maze.create_layer()"
+    "bot= maze.bot()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "rocky-current",
+   "execution_count": 13,
+   "id": "facial-intellectual",
    "metadata": {},
    "outputs": [],
    "source": [
-    "robot = maze.add_robot('./robot-design.svg')"
+    "bot.set_trace('red')\n",
+    "\n",
+    "def turn_right():\n",
+    "    for i in range(3):\n",
+    "        bot.turn_left()\n",
+    "\n",
+    "def jump():\n",
+    "    bot.turn_left()\n",
+    "    bot.move()\n",
+    "    turn_right()\n",
+    "    bot.move()\n",
+    "    turn_right()\n",
+    "    bot.move()\n",
+    "    bot.turn_left()\n",
+    "\n",
+    "while not bot.on_beeper():\n",
+    "    if bot.front_is_clear():\n",
+    "        bot.move()\n",
+    "    else:\n",
+    "        jump()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "incredible-collect",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "maze.remove_trace(0)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "facial-intellectual",
+   "id": "subject-stomach",
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in range(10):\n",
-    "    robot.move()"
+    "bot.pick_beeper()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "amended-geology",
+   "id": "narrow-politics",
    "metadata": {},
    "outputs": [],
    "source": []
