fix - move param added

--- a/inroduction.ipynb
+++ b/inroduction.ipynb
@@ -10,41 +10,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "sophisticated-astrology",
    "metadata": {},
    "outputs": [],
    "source": [
     "from ttgtcanvas import load_world\n",
-    "import asyncio\n",
-    "\n",
     "import os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "wrong-cutting",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1c0d0c5eeeb34999a6030c2e1401ab08",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Maze()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1c0d0c5eeeb34999a6030c2e1401ab08",
+       "model_id": "9b8779f299e340b9ae11296142f9c990",
        "version_major": 2,
        "version_minor": 0
       },
@@ -57,73 +43,68 @@
     }
    ],
    "source": [
-    "maze =  load_world('./worlds/hurdles2.wld')\n",
-    "maze"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "strong-budapest",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bot= maze.bot()"
+    "maze =  load_world('./ttgtcanvas/modules/worlds/hurdles2.wld')\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 13,
+   "id": "strong-budapest",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "maze.init()\n",
+    "bot= maze.bot()\n",
+    "bot.set_trace('red')\n",
+    "bot.set_pause(0.1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "id": "facial-intellectual",
    "metadata": {},
    "outputs": [],
    "source": [
-    "bot.set_trace('red')\n",
-    "\n",
-    "def turn_right():\n",
-    "    for i in range(3):\n",
-    "        bot.turn_left()\n",
-    "\n",
-    "def jump():\n",
-    "    bot.turn_left()\n",
-    "    bot.move()\n",
-    "    turn_right()\n",
-    "    bot.move()\n",
-    "    turn_right()\n",
-    "    bot.move()\n",
-    "    bot.turn_left()\n",
-    "\n",
-    "while not bot.on_beeper():\n",
-    "    if bot.front_is_clear():\n",
-    "        bot.move()\n",
-    "    else:\n",
-    "        jump()\n"
+    "bot.turn_left()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "incredible-collect",
+   "execution_count": 15,
+   "id": "eleven-lawyer",
    "metadata": {},
    "outputs": [],
    "source": [
-    "maze.remove_trace(0)"
+    "bot.move(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "subject-stomach",
+   "execution_count": 7,
+   "id": "appropriate-setup",
    "metadata": {},
    "outputs": [],
    "source": [
-    "bot.pick_beeper()"
+    "bot.turn_left()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "academic-western",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bot.move(5)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "narrow-politics",
+   "id": "different-terrorist",
    "metadata": {},
    "outputs": [],
    "source": []
