--- a/inroduction.ipynb
+++ b/inroduction.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "id": "sophisticated-astrology",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "wrong-cutting",
    "metadata": {
     "scrolled": false
@@ -30,7 +30,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9b8779f299e340b9ae11296142f9c990",
+       "model_id": "4722a7c42eee4833b9856068580864a3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "id": "strong-budapest",
    "metadata": {
     "scrolled": true
@@ -63,17 +63,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "id": "facial-intellectual",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "bot.turn_left()"
+    "bot._dir"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 54,
    "id": "eleven-lawyer",
    "metadata": {},
    "outputs": [],
@@ -83,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "appropriate-setup",
    "metadata": {},
    "outputs": [],
@@ -93,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 60,
    "id": "academic-western",
    "metadata": {},
    "outputs": [],
