feature - flag and bottom display added

--- a/inroduction.ipynb
+++ b/inroduction.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "id": "sophisticated-astrology",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "id": "wrong-cutting",
    "metadata": {
     "scrolled": false
@@ -30,7 +30,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "591239cd542c487b872ea66c21be8574",
+       "model_id": "76389a695c684a68805a11742da866d3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -43,19 +43,19 @@
     }
    ],
    "source": [
-    "maze =  load_world('./ttgtcanvas/modules/worlds/hurdles2.wld')\n"
+    "maze =  load_world('./ttgtcanvas/modules/worlds/hurdles2.wld')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "id": "strong-budapest",
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "maze.init()\n",
+    "maze.init('./robot-yellow.png')\n",
     "bot= maze.bot()\n",
     "bot.set_trace('red')\n",
     "bot.set_pause(0.1)"
@@ -63,59 +63,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "id": "facial-intellectual",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bot.turn_left()\n",
+    "bot.move()\n",
+    "bot.turn_left()\n",
+    "bot.turn_left()\n",
+    "bot.turn_left()\n",
+    "bot.move(6)\n",
+    "bot.turn_left()\n",
+    "bot.turn_left()\n",
+    "bot.turn_left()\n",
+    "bot.move()\n",
+    "bot.pick_beeper()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "worth-notification",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bot.turn_left()\n",
+    "bot.turn_left()\n",
+    "bot.move()\n",
+    "bot.turn_left()\n",
+    "bot.move()\n",
+    "bot.turn_left()\n",
+    "bot.move()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "eleven-lawyer",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3"
+       "True"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "bot._dir"
+    "maze.check()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "eleven-lawyer",
+   "execution_count": 21,
+   "id": "happy-stationery",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "bot.move(5)"
+    "bot.bee()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "appropriate-setup",
+   "execution_count": 18,
+   "id": "thrown-creativity",
    "metadata": {},
    "outputs": [],
    "source": [
-    "bot.turn_left()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "academic-western",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bot.move(5)"
+    "bot.move()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "different-terrorist",
+   "id": "discrete-strengthening",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -123,18 +160,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "appreciated-controversy",
+   "id": "specific-horizontal",
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cathedral-matrix",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
